# clanever-drf-template

./: .gitignore  LICENSE  README.md  README_EN.md  cookiecutter.json  ruff.toml
hooks/: post_gen_project.py
scripts/: test.fish  test.nu
{{ cookiecutter.project_dir }}/: .gitignore  README.md  README_EN.md  manage.py  mise.toml  pyproject.toml  ruff.toml
{{ cookiecutter.project_dir }}/admin_ext/: __init__.py  admin.py  apps.py  debug.py  models.py  permissions.py  urls.py  utils.py
{{ cookiecutter.project_dir }}/admin_ext/migrations/: 0001_initial.py
{{ cookiecutter.project_dir }}/admin_ext/serializers/: knox.py
{{ cookiecutter.project_dir }}/admin_ext/static/admin/: form_fix.css
{{ cookiecutter.project_dir }}/admin_ext/templates/: technical_404.html
{{ cookiecutter.project_dir }}/admin_ext/templates/admin/: base.html
{{ cookiecutter.project_dir }}/admin_ext/templatetags/: simpleui.py
{{ cookiecutter.project_dir }}/admin_ext/views/: flower.py  knox.py  scalar.py
{{ cookiecutter.project_dir }}/admin_patch/: __init__.py  apps.py  debug.py  models.py  urls.py
{{ cookiecutter.project_dir }}/admin_patch/admin/: __init__.py  auth.py  celery.py  dev_tools.py  oidc.py
{{ cookiecutter.project_dir }}/admin_patch/serializers/: oidc.py
{{ cookiecutter.project_dir }}/admin_patch/templates/: scalar.html  technical_404.html
{{ cookiecutter.project_dir }}/admin_patch/templates/admin/: iframe_base.html
{{ cookiecutter.project_dir }}/admin_patch/views/: dev_tools.py  flower.py  oidc.py
{{ cookiecutter.project_dir }}/auth_app/: admin.py  models.py  permissions.py  urls.py
{{ cookiecutter.project_dir }}/auth_app/serializers/: auth.py
{{ cookiecutter.project_dir }}/auth_app/templates/admin/: base.html
{{ cookiecutter.project_dir }}/auth_app/tests/: __init__.py
{{ cookiecutter.project_dir }}/auth_app/views/: auth.py  flower.py
{{ cookiecutter.project_dir }}/debug/: __init__.py  apps.py  debug.py  views.py
{{ cookiecutter.project_dir }}/debug/templates/: scala.html  technical_404.html
{{ cookiecutter.project_dir }}/debug/templatetags/: combine_url.py
{{ cookiecutter.project_dir }}/scripts/: create_test_data.py  docker-dev-db.yaml  restart.sh  start.sh  stop.sh
{{ cookiecutter.project_dir }}/src/: gunicorn_config.py
{{ cookiecutter.project_dir }}/src/auth_app/: models.py  urls.py
{{ cookiecutter.project_dir }}/src/auth_app/serializers/: auth.py
{{ cookiecutter.project_dir }}/src/auth_app/tests/: auth.py
{{ cookiecutter.project_dir }}/src/auth_app/views/: auth.py
{{ cookiecutter.project_dir }}/src/{{ cookiecutter.app_name }}/: admin.py  urls.py
{{ cookiecutter.project_dir }}/src/{{ cookiecutter.app_name }}/models/: __init__.py  {{ cookiecutter.model_name_snake }}.py
{{ cookiecutter.project_dir }}/src/{{ cookiecutter.app_name }}/serializers/: {{ cookiecutter.model_name_snake }}.py
{{ cookiecutter.project_dir }}/src/{{ cookiecutter.app_name }}/tests/: __init__.py
{{ cookiecutter.project_dir }}/src/{{ cookiecutter.app_name }}/views/: {{ cookiecutter.model_name_snake }}.py
{{ cookiecutter.project_dir }}/src/{{ cookiecutter.project_slug }}/: __init__.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.project_dir }}/tests/: conftest.py
{{ cookiecutter.project_dir }}/tests/{{ cookiecutter.app_name }}/: test_{{ cookiecutter.model_name_snake }}.py
{{ cookiecutter.project_dir }}/utils/: __init__.py  admin.py  common.py  db.py  drf_msgspec_json.py  drf_spectacular.py  drf_spectacular_field_fix.py  exception.py  log.py  midware.py  msgspec.py  permission.py  view.py
{{ cookiecutter.project_dir }}/{{ cookiecutter.app_name }}/: admin.py  apps.py  tasks.py  urls.py
{{ cookiecutter.project_dir }}/{{ cookiecutter.app_name }}/admin/: __init__.py  {{ cookiecutter.model_name_snake }}.py
{{ cookiecutter.project_dir }}/{{ cookiecutter.app_name }}/models/: {{ cookiecutter.model_name_snake }}.py
{{ cookiecutter.project_dir }}/{{ cookiecutter.app_name }}/serializers/: {{ cookiecutter.model_name_snake }}.py
{{ cookiecutter.project_dir }}/{{ cookiecutter.app_name }}/tests/: __init__.py  {{ cookiecutter.model_name_snake }}.py
{{ cookiecutter.project_dir }}/{{ cookiecutter.app_name }}/views/: {{ cookiecutter.model_name_snake }}.py
{{ cookiecutter.project_dir }}/{{ cookiecutter.project_slug }}/: __init__.py  asgi.py  celery.py  log_setting.py  log_settings.py  settings.py  urls.py  wsgi.py
