[project]
name = "{{ cookiecutter.project_name|trim() }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
dependencies = [
    "arrow",
    "celery",
    "dj-rest-auth",
    "django",
    "django-allauth",
    "django-celery-beat",
    "django-celery-results",
    "django-filter",
    "django-postgres-extra",
    "django-simpleui",
    "django-structlog",
    "djangorestframework",
    "drf-spectacular[sidecar]",
    "filelock",
    "flower",
    "gunicorn",
    "more-itertools",
    "msgspec",
    "psycopg[binary,pool]",
    "redis",
    "requests",
    "rich",
    "tenacity",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
startapp = { cmd = "cookiecutter https://github.com/ClanEver/clanever-drf-app-template.git" }

dev = { cmd = "python manage.py runserver", env = { DJANGO_CONFIG = "dev" } }
dev_makem = { cmd = "python manage.py makemigrations", env = { DJANGO_CONFIG = "dev" } }
dev_migrate = { cmd = "python manage.py migrate", env = { DJANGO_CONFIG = "dev" } }
dev_mnm = { chain = ["dev_makem", "dev_migrate"] }
dev_cu = { cmd = "python manage.py createsuperuser", env = { DJANGO_CONFIG = "dev" } }
dev_c_beat = { cmd = "celery -A {{ cookiecutter.project_slug }} beat -l INFO", env = { DJANGO_CONFIG = "dev" } }
dev_c_worker = { cmd = "celery -A {{ cookiecutter.project_slug }} worker -l INFO -c 2 -Q default -n default@%h", env = { DJANGO_CONFIG = "dev" } }
dev_c_flower = { cmd = "celery -A {{ cookiecutter.project_slug }} flower", env = { DJANGO_CONFIG = "dev" } }

rung = { cmd = "gunicorn -c gunicorn_config.py {{ cookiecutter.project_slug }}.wsgi", env = { DJANGO_CONFIG = "prod" } }
start = { cmd = "bash scripts/start.sh", env = { DJANGO_CONFIG = "prod" } }
stop = { cmd = "bash scripts/stop.sh", env = { DJANGO_CONFIG = "prod" } }
restart = { cmd = "bash scripts/restart.sh", env = { DJANGO_CONFIG = "prod" } }

[tool.pyright]
venvPath = "."
venv = ".venv"
