[project]
name = '{{ cookiecutter.project_name|trim() }}'
version = '0.1.0'
description = '{{ cookiecutter.description }}'
readme = 'README.md'
requires-python = '==3.13.*'
dependencies = [
    'arrow',
    'authlib',
    'better-exceptions',
    'celery',
    'django',
    'django-celery-beat>=2.7.0',
    'django-celery-results',
    'django-filter',
    'django-import-export',
    'django-rest-knox',
    'django-revproxy',
    'django-structlog',
    'django-unfold',
    'djangorestframework',
    'drf-spectacular[sidecar]',
    'filelock',
    'flower',
    'httpx',
    'gunicorn',
    'more-itertools',
    'msgspec',
    'psycopg[binary,pool]',
    'redis',
    'tenacity',
]

[dependency-groups]
dev = [
    'django-debug-toolbar',
    'django-stubs',
]

[tool.pyright]
venvPath = '.'
venv = '.venv'
